--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
 		display: inline-block;
 		vertical-align: top;
 		border: 2px solid black;
-		margin: 0 0 15px 0;
+		margin: 15px;
 	}
 
 	.three-cell{
@@ -252,6 +252,9 @@
 	@media (max-width: 750px){
 		.flex-container{
 			display: block;
+		}
+		.three-cell .two-cell{
+			width: 100%;
 		}
 		#menubutton{
 			display: inline-block;
