--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
 		.flex-container{
 			display: block;
 		}
-		.three-cell .two-cell{
+		.three-cell, .two-cell{
 			width: 100%;
 		}
 		#menubutton{
