--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
 		display: inline-block;
 		vertical-align: top;
 		border: 2px solid black;
-		margin: 10px;
+		margin: 5px;
 	}
 
 	.three-cell{
@@ -255,6 +255,9 @@
 		}
 		.three-cell, .two-cell{
 			width: 100%;
+		}
+		.case-study-box{
+			margin: 5px 0;
 		}
 		#menubutton{
 			display: inline-block;
