--- a/projects/stayabit/index.html
+++ b/projects/stayabit/index.html
@@ -13,6 +13,8 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/lettering.js/0.7.0/jquery.lettering.min.js"></script>
   <script src="http://circletype.labwire.ca/js/circletype.js"></script>
+  <script type="text/javascript" src="/js/lib/flickity.pkgd.min.js"></script>
+  <link type="text/css" rel="stylesheet" href="/css/lib/flickity.min.css">
   <style type="text/css">
   body{
     background-color: white;
@@ -153,28 +155,28 @@
 <p>Naming this token the Stayabit, we went to work. Our CTO worked tirelessly on the smart contracts while I collaborated with the marketing team to define the look of the brand while simultaneously developing and designing our token sale landing page.</p>
 <!-- FLICKITY IMAGES -->
 <img src="  
-https://s3-us-west-2.amazonaws.com/wip-bucket/github/arithmatic/new-screens/homescreen-unlocked-red.png" style="max-width: 350px;">
+https://s3-us-west-2.amazonaws.com/wip-bucket/github/arithmatic/new-screens/homescreen-unlocked-red.png">
 <!-- FLICKITY IMAGES -->
 
 <p>Once the sale goes live, we needed a way for potential buyers to understand what state the sale is in. We were unique in that there'd be discounts depending on how many were sold, where the earlier you buy in the sale the better the discount tier you can potentially be. I designed a scaling bar graph that visually represented these tiers, as well as developed its responsiveness on mobile devices.</p>
 
 <!-- FLICKITY LANDING STATES -->
 <img src="  
-https://s3-us-west-2.amazonaws.com/wip-bucket/github/arithmatic/new-screens/homescreen-unlocked-red.png" style="max-width: 350px;">
+https://s3-us-west-2.amazonaws.com/wip-bucket/github/arithmatic/new-screens/homescreen-unlocked-red.png">
 <!-- FLICKITY LANDING STATES -->
 
 <p>I also designed a 'checkout' flow where customers fill in their information before being taken to the wallet link, with these screens taking place in the top portion of the website, rather than using a modal or taking users to a brand-new page. This was done to keep customers in the context of the sale, if during their checkout process they wanted to look into a certain detail about the sale they'd just have to scroll down rather than exiting a modal or going back to the previous page.</p>
 
 <!-- FLICKITY CHECKOUT -->
 <img src="  
-https://s3-us-west-2.amazonaws.com/wip-bucket/github/arithmatic/new-screens/homescreen-unlocked-red.png" style="max-width: 350px;">
+https://s3-us-west-2.amazonaws.com/wip-bucket/github/arithmatic/new-screens/homescreen-unlocked-red.png">
 <!-- FLICKITY CHECKOUT -->
 
 <p>It was also important for us to give back to the cryptocommunity and engage with the audience, so we created a Medium publication called <a href="" class="contentlinks">Faces of Crypto</a> where we interviewed several cryptoenthusiasts and the impact cryptocurrencies had made on their lives.</p>
 
 <!-- FACES OF CRYPTO -->
 <img src="  
-https://s3-us-west-2.amazonaws.com/wip-bucket/github/arithmatic/new-screens/homescreen-unlocked-red.png" style="max-width: 350px;">
+https://s3-us-west-2.amazonaws.com/wip-bucket/github/arithmatic/new-screens/homescreen-unlocked-red.png">
 <!-- FACES OF CRYPTO -->
 
 <p>We also worked together to create a <a href="" class="contentlinks">whitepaper</a> explaining the mechanics and intricacies of the Stayabit, which I contributed to the content and design of the layout.</p>
