--- a/projects/stayawhile/index.html
+++ b/projects/stayawhile/index.html
@@ -144,8 +144,10 @@
 <p>In March 2017, I was hired as the Lead Product Designer at Stayawhile. Stayawhile's mission was to create a branded network of furnished apartments for stays of a month or more. After passing an initial background check, users would have full access to all of our units and can book them with no concerns about safety or paperwork. All Stayawhile units would be furnished to our brand standards and would come with all the utilities you'd need including wifi, cable, a fully-stocked kitchen, bathroom amenities and much more. At the time there was no app in place and zero apartments in our portfolio. I was a part of the tech team, a scrappy team of three consisting of our CTO, our full-stack developer and me. In two months I had wireframed, designed, branded and coded the front-end for the entire first-version of the application.</p>
 
 <!-- FLICKITY INITIAL BRAND -->
-<img src="  
-https://s3-us-west-2.amazonaws.com/wip-bucket/github/arithmatic/new-screens/homescreen-unlocked-red.png" style="max-width: 350px;">
+<div data-flickity='{ "wrapAround": true, "percentPosition": false, "imagesLoaded": true, "freeScroll": true }'>
+  <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/alice-crm/vendor-crm-main.png">
+  <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/alice-crm/vendor-crm-main.png">
+</div>
 <!-- FLICKITY INITIAL BRAND -->
 
 <p>With hundreds of wireframes produced in a short amount of time, countless edits to our brand direction and developing the CSS UI library for the entire site, our MVP was ready. The apartment team also had their hands full in leasing, furnishing and setting up utilities in several apartments in the span of a couple months.</p>
@@ -153,33 +155,33 @@ https://s3-us-west-2.amazonaws.com/wip-bucket/github/arithmatic/new-screens/home
 
 <!-- INSERT BIG HUMAN IMAGES -->
 <img src="  
-https://s3-us-west-2.amazonaws.com/wip-bucket/github/arithmatic/new-screens/homescreen-unlocked-red.png" style="max-width: 350px;">
+https://s3-us-west-2.amazonaws.com/wip-bucket/github/arithmatic/new-screens/homescreen-unlocked-red.png">
 <!-- INSERT BIG HUMAN IMAGES -->
 
 <p>Most pages on the site are static, with the exception of the user dashboard and locations/listings pages which were dynamically populated using a Python framework called Flask.</p>
 <p>The user dashboard has multiple states:</p>
   <ul>
-    <li>New Member: The user has signed up with their email or Facebook/Google account but has yet to pass the background check.</li>
-    <li>Full Member: The user has successfully passed the background check and can sign up to any available units in our network.</li>
-    <li>Rejected: The user has not passed the background check, due to a discrepancy or criminality found in the check.</li>
+    <li><strong>New Member:</strong> The user has signed up with their email or Facebook/Google account but has yet to pass the background check.</li>
+    <li><strong>Full Member:</strong> The user has successfully passed the background check and can sign up to any available units in our network.</li>
+    <li><strong>Rejected:</strong> The user has not passed the background check, due to a discrepancy or criminality found in the check.</li>
   </ul>
 
 <!-- DASHBOARDS FLICKITY -->
 <img src="  
-https://s3-us-west-2.amazonaws.com/wip-bucket/github/arithmatic/new-screens/homescreen-unlocked-red.png" style="max-width: 350px;">
+https://s3-us-west-2.amazonaws.com/wip-bucket/github/arithmatic/new-screens/homescreen-unlocked-red.png">
 <!-- DASHBOARDS FLICKITY -->
 
 <p>The dashboard for full members also comes with multiple states:</p>
   <ul>
-    <li>Empty Dashboard: The user has yet to book any units.</li>
-    <li>Upcoming Booking: The user has booked a unit at an upcoming date. Users can modify or cancel this reservation.</li>
-    <li>Active Booking: At the date of your upcoming booking, the dashboard UI will reflect this as an active booking, with users able to lengthen their stay. They will not be able to shorten or cancel at this point.</li>
-    <li>Previous Bookings: A list of previous units the user has stayed in, with invoice details.</li>
+    <li><strong>Empty Dashboard:</strong> The user has yet to book any units.</li>
+    <li><strong>Upcoming Booking:</strong> The user has booked a unit at an upcoming date. Users can modify or cancel this reservation.</li>
+    <li><strong>Active Booking:</strong> At the date of your upcoming booking, the dashboard UI will reflect this as an active booking, with users able to lengthen their stay. They will not be able to shorten or cancel at this point.</li>
+    <li><strong>Previous Bookings:</strong> A list of previous units the user has stayed in, with invoice details.</li>
   </ul>
 
 <!-- DASHBOARDS FLICKITY -->
 <img src="  
-https://s3-us-west-2.amazonaws.com/wip-bucket/github/arithmatic/new-screens/homescreen-unlocked-red.png" style="max-width: 350px;">
+https://s3-us-west-2.amazonaws.com/wip-bucket/github/arithmatic/new-screens/homescreen-unlocked-red.png">
 <!-- DASHBOARDS FLICKITY -->
 
 <p>The Locations page is arguably the most complex page on the site. This is where users would most likely spend the majority of their time. Since we wanted to encourage users to look at the apartments we offer as a network, units from every city we're established in&mdash;NYC, Boston and Philadelphia&mdash;can be viewed at once from this page.</p>
@@ -187,23 +189,23 @@ https://s3-us-west-2.amazonaws.com/wip-bucket/github/arithmatic/new-screens/home
 
 <!-- INSERT SCROLLING VIDEO -->
 <img src="  
-https://s3-us-west-2.amazonaws.com/wip-bucket/github/arithmatic/new-screens/homescreen-unlocked-red.png" style="max-width: 350px;">
+https://s3-us-west-2.amazonaws.com/wip-bucket/github/arithmatic/new-screens/homescreen-unlocked-red.png">
 <!-- INSERT SCROLLING VIDEO -->
 <!-- INSERT MAP PIN IMAGE -->
 <img src="  
-https://s3-us-west-2.amazonaws.com/wip-bucket/github/arithmatic/new-screens/homescreen-unlocked-red.png" style="max-width: 350px;">
+https://s3-us-west-2.amazonaws.com/wip-bucket/github/arithmatic/new-screens/homescreen-unlocked-red.png">
 <!-- INSERT MAP PIN IMAGE -->
 
 <p>I designed a unique set of symbols to represent unique amenities and policies found in the apartment building.</p>
 <!-- INSERT AMENITY ICONS -->
 <img src="  
-https://s3-us-west-2.amazonaws.com/wip-bucket/github/arithmatic/new-screens/homescreen-unlocked-red.png" style="max-width: 350px;">
+https://s3-us-west-2.amazonaws.com/wip-bucket/github/arithmatic/new-screens/homescreen-unlocked-red.png">
 <!-- INSERT AMENITY ICONS -->
 <p>Since we frequently has multiple units within the same building, I designed a nested display where the full cell represents a building with its own metadata and the actual apartment units are nested inside with its corresponding information. The building address, neighborhood, amenities and policies are also 'sticky', following the user scrolling down the page until it reaches the end of its container.</p>
 
 <!-- INSERT BUILDING CELL -->
 <img src="  
-https://s3-us-west-2.amazonaws.com/wip-bucket/github/arithmatic/new-screens/homescreen-unlocked-red.png" style="max-width: 350px;">
+https://s3-us-west-2.amazonaws.com/wip-bucket/github/arithmatic/new-screens/homescreen-unlocked-red.png">
 <!-- INSERT BUILDING CELL -->
 
 Since this is a single page with almost thirty apartments, filtering is essential to the user experience. I designed a set of filters for the following parameters:
@@ -217,7 +219,7 @@ Since this is a single page with almost thirty apartments, filtering is essentia
 
 <!-- INSERT FILTERS -->
 <img src="  
-https://s3-us-west-2.amazonaws.com/wip-bucket/github/arithmatic/new-screens/homescreen-unlocked-red.png" style="max-width: 350px;">
+https://s3-us-west-2.amazonaws.com/wip-bucket/github/arithmatic/new-screens/homescreen-unlocked-red.png">
 <!-- INSERT FILTERS -->
 
 <p>For the most part, these filters are a series of customized checkboxes, while the policies are actually radio buttons. The amenities selection is a series of customized checkboxes, where the icon itself is the checkbox. Policies were built as radio buttons since&mdash;for example&mdash;a filtered unit cannot be both smoking and non-smoking.</p>
@@ -225,28 +227,28 @@ https://s3-us-west-2.amazonaws.com/wip-bucket/github/arithmatic/new-screens/home
 
 <!-- INSERT SELECTED FILTERS -->
 <img src="  
-https://s3-us-west-2.amazonaws.com/wip-bucket/github/arithmatic/new-screens/homescreen-unlocked-red.png" style="max-width: 350px;">
+https://s3-us-west-2.amazonaws.com/wip-bucket/github/arithmatic/new-screens/homescreen-unlocked-red.png">
 <!-- INSERT SELECTED FILTERS -->
 
 <p>It was also important to design both an empty state if the filters turned up no units and an error state in case anything went wrong with the filtering system.</p>
 
 <!-- FLICKITY EMPTY ERROR STATES -->
 <img src="  
-https://s3-us-west-2.amazonaws.com/wip-bucket/github/arithmatic/new-screens/homescreen-unlocked-red.png" style="max-width: 350px;">
+https://s3-us-west-2.amazonaws.com/wip-bucket/github/arithmatic/new-screens/homescreen-unlocked-red.png">
 <!-- FLICKITY EMPTY ERROR STATES -->
 
 <p>I also designed a view for apartments under renovation or furnishing that is available to be booked.</p>
 
 <!-- TRANSFORMATION IN PROGRESS -->
 <img src="  
-https://s3-us-west-2.amazonaws.com/wip-bucket/github/arithmatic/new-screens/homescreen-unlocked-red.png" style="max-width: 350px;">
+https://s3-us-west-2.amazonaws.com/wip-bucket/github/arithmatic/new-screens/homescreen-unlocked-red.png">
 <!-- TRANSFORMATION IN PROGRESS -->
 
 <p>Once you click on a unit, you're taken to its unit page where you can get a full size gallery, more information on the amenities and policies in-place and a booking block, where users can see when the unit is available and book based on that availability.</p>
 
 <!-- FLICKITY LISTING -->
 <img src="  
-https://s3-us-west-2.amazonaws.com/wip-bucket/github/arithmatic/new-screens/homescreen-unlocked-red.png" style="max-width: 350px;">
+https://s3-us-west-2.amazonaws.com/wip-bucket/github/arithmatic/new-screens/homescreen-unlocked-red.png">
 <!-- FLICKITY LISTING -->
 
 <p>Overall, it has been a fun journey at Stayawhile. I've grown leaps and bounds as both a designer and developer and am confident I can build anything on the web.</p>
