--- a/projects/stayawhile/index.html
+++ b/projects/stayawhile/index.html
@@ -12,8 +12,8 @@
   <link href='https://fonts.googleapis.com/css?family=Anonymous+Pro' rel='stylesheet' type='text/css'>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/lettering.js/0.7.0/jquery.lettering.min.js"></script>
-  <script src="flickity.pkgd.min.js"></script>
-  <link type="text/css" rel="stylesheet" href="flickity.min.css">
+  <script src="../flickity.pkgd.min.js"></script>
+  <link type="text/css" rel="stylesheet" href="../flickity.min.css">
   <style type="text/css">
   body{
     background-color: white;
