--- a/projects/stayawhile/index.html
+++ b/projects/stayawhile/index.html
@@ -144,8 +144,10 @@
 
 <!-- FLICKITY INITIAL BRAND -->
 <div data-flickity='{ "wrapAround": true, "percentPosition": false, "imagesLoaded": true, "freeScroll": true }'>
-  <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/alice-crm/vendor-crm-main.png">
-  <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/alice-crm/vendor-crm-main.png">
+  <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/landing.jpg">
+  <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/how-it-works.jpg">
+  <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/real-estate.jpg">
+  <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/listing.jpg">
 </div>
 <!-- FLICKITY INITIAL BRAND -->
 
@@ -153,8 +155,9 @@
 <p>After initial feedback from customers, we decided to pivot our brand direction, emphasizing a more colorful, younger aesthetic. We hired Big Human to come up with a new aesthetic for us, with a new color scheme and illustration style.</p>
 
 <!-- INSERT BIG HUMAN IMAGES -->
-<img src="  
-https://s3-us-west-2.amazonaws.com/wip-bucket/github/arithmatic/new-screens/homescreen-unlocked-red.png">
+<div data-flickity='{ "wrapAround": true, "percentPosition": false, "imagesLoaded": true, "freeScroll": true }'>
+  <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/arithmatic/new-screens/homescreen-unlocked-red.png">
+<div data-flickity='{ "wrapAround": true, "percentPosition": false, "imagesLoaded": true, "freeScroll": true }'>
 <!-- INSERT BIG HUMAN IMAGES -->
 
 <p>Most pages on the site are static, with the exception of the user dashboard and locations/listings pages which were dynamically populated using a Python framework called Flask.</p>
@@ -166,8 +169,9 @@ https://s3-us-west-2.amazonaws.com/wip-bucket/github/arithmatic/new-screens/home
   </ul>
 
 <!-- DASHBOARDS FLICKITY -->
-<img src="  
-https://s3-us-west-2.amazonaws.com/wip-bucket/github/arithmatic/new-screens/homescreen-unlocked-red.png">
+<div data-flickity='{ "wrapAround": true, "percentPosition": false, "imagesLoaded": true, "freeScroll": true }'>
+  <img src=" https://s3-us-west-2.amazonaws.com/wip-bucket/github/arithmatic/new-screens/homescreen-unlocked-red.png">
+</div>
 <!-- DASHBOARDS FLICKITY -->
 
 <p>The dashboard for full members also comes with multiple states:</p>
@@ -179,16 +183,16 @@ https://s3-us-west-2.amazonaws.com/wip-bucket/github/arithmatic/new-screens/home
   </ul>
 
 <!-- DASHBOARDS FLICKITY -->
-<img src="  
-https://s3-us-west-2.amazonaws.com/wip-bucket/github/arithmatic/new-screens/homescreen-unlocked-red.png">
+<div data-flickity='{ "wrapAround": true, "percentPosition": false, "imagesLoaded": true, "freeScroll": true }'>
+  <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/arithmatic/new-screens/homescreen-unlocked-red.png">
+<div data-flickity='{ "wrapAround": true, "percentPosition": false, "imagesLoaded": true, "freeScroll": true }'>
 <!-- DASHBOARDS FLICKITY -->
 
 <p>The Locations page is arguably the most complex page on the site. This is where users would most likely spend the majority of their time. Since we wanted to encourage users to look at the apartments we offer as a network, units from every city we're established in&mdash;NYC, Boston and Philadelphia&mdash;can be viewed at once from this page.</p>
 <p>In order to show multiple cities within the same apartment view, I coded a 'sticky' interaction where the city map follows the units until the bottom of its container. This map also has custom pins designed to show which apartment is being hovered over.</p>
 
 <!-- INSERT SCROLLING VIDEO -->
-<img src="  
-https://s3-us-west-2.amazonaws.com/wip-bucket/github/arithmatic/new-screens/homescreen-unlocked-red.png">
+<img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/arithmatic/new-screens/homescreen-unlocked-red.png">
 <!-- INSERT SCROLLING VIDEO -->
 <!-- INSERT MAP PIN IMAGE -->
 <img src="  
@@ -197,14 +201,12 @@ https://s3-us-west-2.amazonaws.com/wip-bucket/github/arithmatic/new-screens/home
 
 <p>I designed a unique set of symbols to represent unique amenities and policies found in the apartment building.</p>
 <!-- INSERT AMENITY ICONS -->
-<img src="  
-https://s3-us-west-2.amazonaws.com/wip-bucket/github/arithmatic/new-screens/homescreen-unlocked-red.png">
+<img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/arithmatic/new-screens/homescreen-unlocked-red.png">
 <!-- INSERT AMENITY ICONS -->
 <p>Since we frequently has multiple units within the same building, I designed a nested display where the full cell represents a building with its own metadata and the actual apartment units are nested inside with its corresponding information. The building address, neighborhood, amenities and policies are also 'sticky', following the user scrolling down the page until it reaches the end of its container.</p>
 
 <!-- INSERT BUILDING CELL -->
-<img src="  
-https://s3-us-west-2.amazonaws.com/wip-bucket/github/arithmatic/new-screens/homescreen-unlocked-red.png">
+<img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/arithmatic/new-screens/homescreen-unlocked-red.png">
 <!-- INSERT BUILDING CELL -->
 
 Since this is a single page with almost thirty apartments, filtering is essential to the user experience. I designed a set of filters for the following parameters:
@@ -217,37 +219,36 @@ Since this is a single page with almost thirty apartments, filtering is essentia
   </ul>
 
 <!-- INSERT FILTERS -->
-<img src="  
-https://s3-us-west-2.amazonaws.com/wip-bucket/github/arithmatic/new-screens/homescreen-unlocked-red.png">
+<img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/arithmatic/new-screens/homescreen-unlocked-red.png">
 <!-- INSERT FILTERS -->
 
 <p>For the most part, these filters are a series of customized checkboxes, while the policies are actually radio buttons. The amenities selection is a series of customized checkboxes, where the icon itself is the checkbox. Policies were built as radio buttons since&mdash;for example&mdash;a filtered unit cannot be both smoking and non-smoking.</p>
 <p>Once your filters were selected, I wanted users to be able to tell for the most part what they had selected without needing to open up the filter again. For the dates and price, a simple text change would suffice. For amenities and policies, I inserted the up to two of the selected icons into the button itself. Any number of selected items larger than two would be replaced by the number representing the amount selected there.</p>
 
 <!-- INSERT SELECTED FILTERS -->
-<img src="  
-https://s3-us-west-2.amazonaws.com/wip-bucket/github/arithmatic/new-screens/homescreen-unlocked-red.png">
+<img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/arithmatic/new-screens/homescreen-unlocked-red.png">
 <!-- INSERT SELECTED FILTERS -->
 
 <p>It was also important to design both an empty state if the filters turned up no units and an error state in case anything went wrong with the filtering system.</p>
 
 <!-- FLICKITY EMPTY ERROR STATES -->
-<img src="  
-https://s3-us-west-2.amazonaws.com/wip-bucket/github/arithmatic/new-screens/homescreen-unlocked-red.png">
+<div data-flickity='{ "wrapAround": true, "percentPosition": false, "imagesLoaded": true, "freeScroll": true }'>
+  <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/arithmatic/new-screens/homescreen-unlocked-red.png">
+</div>
 <!-- FLICKITY EMPTY ERROR STATES -->
 
 <p>I also designed a view for apartments under renovation or furnishing that is available to be booked.</p>
 
 <!-- TRANSFORMATION IN PROGRESS -->
-<img src="  
-https://s3-us-west-2.amazonaws.com/wip-bucket/github/arithmatic/new-screens/homescreen-unlocked-red.png">
+<img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/arithmatic/new-screens/homescreen-unlocked-red.png">
 <!-- TRANSFORMATION IN PROGRESS -->
 
 <p>Once you click on a unit, you're taken to its unit page where you can get a full size gallery, more information on the amenities and policies in-place and a booking block, where users can see when the unit is available and book based on that availability.</p>
 
 <!-- FLICKITY LISTING -->
-<img src="  
-https://s3-us-west-2.amazonaws.com/wip-bucket/github/arithmatic/new-screens/homescreen-unlocked-red.png">
+<div data-flickity='{ "wrapAround": true, "percentPosition": false, "imagesLoaded": true, "freeScroll": true }'>
+  <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/arithmatic/new-screens/homescreen-unlocked-red.png">
+</div>
 <!-- FLICKITY LISTING -->
 
 <p>Overall, it has been a fun journey at Stayawhile. I've grown leaps and bounds as both a designer and developer and am confident I can build anything on the web.</p>
