--- a/projects/creepypasta/index.html
+++ b/projects/creepypasta/index.html
@@ -93,6 +93,11 @@
     padding: 0;
     margin-left: -6px;
   }
+  .flex-responsive, .flex-static{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
 
   #menubutton{
     display: none;
@@ -113,6 +118,9 @@
     }
     .dash{
       display: none;
+    }
+    .flex-responsive{
+      display: block;
     }
 
   }
@@ -140,7 +148,59 @@
 <div class="img-container">
 <h3>Creepypasta Stickers</h3>
 <p>Within messages I use stickers a lot, but I've noticed they tend to be either cute or funny. I thought it'd be interesting to make a set of stickers for iOS that were designed to be genuinely creepy and unsettling. I decided to base them on creepypasta, a fun genre of online horror stories that are heavily character-driven that are engineered to creep its readers out. I selected 20 characters and scenarios from these stories that I felt I could make compelling stickers out of, and went about illustrating and animating them all in Illustrator and After Effects. Using Xcode, I compiled them into a sticker app and deployed it to the App Store, getting it successfully approved in under a day, right in time for Halloween.</p>
+
 <!-- INSERT CREEPY GIFS -->
+<div class="flex-responsive">
+  <div class="flex-static">
+    <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/creepypasta/ben-drowned.gif">
+    <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/creepypasta/ben-monster.gif">
+  </div>
+  <div class="flex-static">
+    <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/creepypasta/bob.gif">
+    <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/creepypasta/dead-bart.gif">
+  </div>
+</div>
+<div class="flex-responsive">
+  <div class="flex-static">
+    <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/creepypasta/expressionless.gif">
+    <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/creepypasta/glesgorv.gif">
+  </div>
+  <div class="flex-static">
+    <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/creepypasta/herobrine.gif">
+    <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/creepypasta/jeff-the-killer.gif">
+  </div>
+</div>
+<div class="flex-responsive">
+  <div class="flex-static">
+    <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/creepypasta/laughing-jack.gif">
+    <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/creepypasta/scp-stairs.gif">
+  </div>
+  <div class="flex-static">
+    <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/creepypasta/scp-statue.gif">
+    <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/creepypasta/sleep.gif">
+  </div>
+</div>
+<div class="flex-responsive">
+  <div class="flex-static">
+    <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/creepypasta/slender.gif">
+    <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/creepypasta/smile-dog.gif">
+  </div>
+  <div class="flex-static">
+    <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/creepypasta/smiling-man.gif">
+    <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/creepypasta/squidward.gif">
+  </div>
+</div>
+<div class="flex-responsive">
+  <div class="flex-static">
+    <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/creepypasta/tails.gif">
+    <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/creepypasta/ted-the-caver.gif">
+  </div>
+  <div class="flex-static">
+    <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/creepypasta/the-rake.gif">
+    <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/creepypasta/white-with-red.gif">
+  </div>
+</div>
+
 <p>Be sure to check out the app <a class ="contentlinks" href="https://itunes.apple.com/us/app/creepypasta-stickers/id1299579002">here</a>.</p>
 </div>
 
