--- a/projects/stayawhile/index.html
+++ b/projects/stayawhile/index.html
@@ -146,7 +146,6 @@
 <div data-flickity='{ "wrapAround": true, "percentPosition": false, "imagesLoaded": true, "freeScroll": true, "adaptiveHeight":true }'>
   <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/landing.jpg">
   <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/how-it-works.jpg">
-  <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/real-estate.jpg">
   <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/listing.jpg">
 </div>
 <!-- FLICKITY INITIAL BRAND -->
@@ -155,9 +154,11 @@
 <p>After initial feedback from customers, we decided to pivot our brand direction, emphasizing a more colorful, younger aesthetic. We hired Big Human to come up with a new aesthetic for us, with a new color scheme and illustration style.</p>
 
 <!-- INSERT BIG HUMAN IMAGES -->
-<div data-flickity='{ "wrapAround": true, "percentPosition": false, "imagesLoaded": true, "freeScroll": true }'>
-  <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/arithmatic/new-screens/homescreen-unlocked-red.png">
-<div data-flickity='{ "wrapAround": true, "percentPosition": false, "imagesLoaded": true, "freeScroll": true }'>
+<div data-flickity='{ "wrapAround": true, "percentPosition": false, "imagesLoaded": true, "freeScroll": true, "adaptiveHeight":true }'>
+  <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/main-new.jpg">
+  <img src="  https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/how.png">
+  <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/brand.jpg">
+</div>
 <!-- INSERT BIG HUMAN IMAGES -->
 
 <p>Most pages on the site are static, with the exception of the user dashboard and locations/listings pages which were dynamically populated using a Python framework called Flask.</p>
@@ -169,7 +170,7 @@
   </ul>
 
 <!-- DASHBOARDS FLICKITY -->
-<div data-flickity='{ "wrapAround": true, "percentPosition": false, "imagesLoaded": true, "freeScroll": true }'>
+<div data-flickity='{ "wrapAround": true, "percentPosition": false, "imagesLoaded": true, "freeScroll": true, "adaptiveHeight":true }'>
   <img src=" https://s3-us-west-2.amazonaws.com/wip-bucket/github/arithmatic/new-screens/homescreen-unlocked-red.png">
 </div>
 <!-- DASHBOARDS FLICKITY -->
@@ -183,7 +184,7 @@
   </ul>
 
 <!-- DASHBOARDS FLICKITY -->
-<div data-flickity='{ "wrapAround": true, "percentPosition": false, "imagesLoaded": true, "freeScroll": true }'>
+<div data-flickity='{ "wrapAround": true, "percentPosition": false, "imagesLoaded": true, "freeScroll": true, "adaptiveHeight":true }'>
   <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/arithmatic/new-screens/homescreen-unlocked-red.png">
 <div data-flickity='{ "wrapAround": true, "percentPosition": false, "imagesLoaded": true, "freeScroll": true }'>
 <!-- DASHBOARDS FLICKITY -->
@@ -219,6 +220,7 @@ Since this is a single page with almost thirty apartments, filtering is essentia
   </ul>
 
 <!-- INSERT FILTERS -->
+
 <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/arithmatic/new-screens/homescreen-unlocked-red.png">
 <!-- INSERT FILTERS -->
 
@@ -226,14 +228,20 @@ Since this is a single page with almost thirty apartments, filtering is essentia
 <p>Once your filters were selected, I wanted users to be able to tell for the most part what they had selected without needing to open up the filter again. For the dates and price, a simple text change would suffice. For amenities and policies, I inserted the up to two of the selected icons into the button itself. Any number of selected items larger than two would be replaced by the number representing the amount selected there.</p>
 
 <!-- INSERT SELECTED FILTERS -->
-<img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/arithmatic/new-screens/homescreen-unlocked-red.png">
+<div data-flickity='{ "wrapAround": true, "percentPosition": false, "imagesLoaded": true, "freeScroll": true, "adaptiveHeight":true }'>
+  <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/Screen+Shot+2017-12-13+at+8.01.31+PM.png">
+  <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/Screen+Shot+2017-12-13+at+8.01.48+PM.png">
+  <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/Screen+Shot+2017-12-13+at+8.02.06+PM.png">
+  <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/Screen+Shot+2017-12-13+at+8.02.19+PM.png">
+<div data-flickity='{ "wrapAround": true, "percentPosition": false, "imagesLoaded": true, "freeScroll": true, "adaptiveHeight":true }'>
 <!-- INSERT SELECTED FILTERS -->
 
 <p>It was also important to design both an empty state if the filters turned up no units and an error state in case anything went wrong with the filtering system.</p>
 
 <!-- FLICKITY EMPTY ERROR STATES -->
-<div data-flickity='{ "wrapAround": true, "percentPosition": false, "imagesLoaded": true, "freeScroll": true }'>
-  <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/arithmatic/new-screens/homescreen-unlocked-red.png">
+<div data-flickity='{ "wrapAround": true, "percentPosition": false, "imagesLoaded": true, "freeScroll": true, "adaptiveHeight":true }'>
+  <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/empty-state.png">
+  <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/error-state.png">
 </div>
 <!-- FLICKITY EMPTY ERROR STATES -->
 
@@ -246,7 +254,7 @@ Since this is a single page with almost thirty apartments, filtering is essentia
 <p>Once you click on a unit, you're taken to its unit page where you can get a full size gallery, more information on the amenities and policies in-place and a booking block, where users can see when the unit is available and book based on that availability.</p>
 
 <!-- FLICKITY LISTING -->
-<div data-flickity='{ "wrapAround": true, "percentPosition": false, "imagesLoaded": true, "freeScroll": true }'>
+<div data-flickity='{ "wrapAround": true, "percentPosition": false, "imagesLoaded": true, "freeScroll": true, "adaptiveHeight":true }'>
   <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/arithmatic/new-screens/homescreen-unlocked-red.png">
 </div>
 <!-- FLICKITY LISTING -->
