--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
 			</div>
 			<div class="case-study-box two-cell">
 				<h4>Case Study</h4>
-				<p class="case-study-text"><a href="https://itunes.apple.com/us/app/creepypasta-stickers/id1299579002" class="contentlinks">Creepypasta Stickers</a>&mdash;A horror-themed sticker app for iOS based on the best creepy stories found online, with over 20 animated stickers available for free.</p>
+				<p class="case-study-text"><a href="/projects/creepypasta/" class="contentlinks">Creepypasta Stickers</a>&mdash;A horror-themed sticker app for iOS based on the best creepy stories found online, with over 20 animated stickers available for free.</p>
 			</div>
 		</div>
 
