--- a/projects/creepypasta/index.html
+++ b/projects/creepypasta/index.html
@@ -105,6 +105,9 @@
   h3{
     font-weight: 400;
   }
+  .creepypicture{
+    padding: 10px;
+  }
 
   @media (max-width: 700px){
     #menubutton{
@@ -152,52 +155,52 @@
 <!-- INSERT CREEPY GIFS -->
 <div class="flex-responsive">
   <div class="flex-static">
-    <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/creepypasta/ben-drowned.gif">
-    <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/creepypasta/ben-monster.gif">
+    <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/creepypasta/ben-drowned.gif" class="creepypicture">
+    <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/creepypasta/ben-monster.gif" class="creepypicture">
   </div>
   <div class="flex-static">
-    <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/creepypasta/bob.gif">
-    <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/creepypasta/dead-bart.gif">
-  </div>
-</div>
-<div class="flex-responsive">
-  <div class="flex-static">
-    <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/creepypasta/expressionless.gif">
-    <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/creepypasta/glesgorv.gif">
-  </div>
-  <div class="flex-static">
-    <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/creepypasta/herobrine.gif">
-    <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/creepypasta/jeff-the-killer.gif">
+    <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/creepypasta/bob.gif" class="creepypicture">
+    <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/creepypasta/dead-bart.gif" class="creepypicture">
   </div>
 </div>
 <div class="flex-responsive">
   <div class="flex-static">
-    <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/creepypasta/laughing-jack.gif">
-    <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/creepypasta/scp-stairs.gif">
+    <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/creepypasta/expressionless.gif" class="creepypicture">
+    <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/creepypasta/glesgorv.gif" class="creepypicture">
   </div>
   <div class="flex-static">
-    <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/creepypasta/scp-statue.gif">
-    <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/creepypasta/sleep.gif">
-  </div>
-</div>
-<div class="flex-responsive">
-  <div class="flex-static">
-    <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/creepypasta/slender.gif">
-    <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/creepypasta/smile-dog.gif">
-  </div>
-  <div class="flex-static">
-    <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/creepypasta/smiling-man.gif">
-    <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/creepypasta/squidward.gif">
+    <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/creepypasta/herobrine.gif" class="creepypicture">
+    <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/creepypasta/jeff-the-killer.gif" class="creepypicture">
   </div>
 </div>
 <div class="flex-responsive">
   <div class="flex-static">
-    <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/creepypasta/tails.gif">
-    <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/creepypasta/ted-the-caver.gif">
+    <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/creepypasta/laughing-jack.gif" class="creepypicture">
+    <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/creepypasta/scp-stairs.gif" class="creepypicture">
   </div>
   <div class="flex-static">
-    <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/creepypasta/the-rake.gif">
-    <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/creepypasta/white-with-red.gif">
+    <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/creepypasta/scp-statue.gif" class="creepypicture">
+    <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/creepypasta/sleep.gif" class="creepypicture">
+  </div>
+</div>
+<div class="flex-responsive">
+  <div class="flex-static">
+    <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/creepypasta/slender.gif" class="creepypicture">
+    <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/creepypasta/smile-dog.gif" class="creepypicture">
+  </div>
+  <div class="flex-static">
+    <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/creepypasta/smiling-man.gif" class="creepypicture">
+    <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/creepypasta/squidward.gif" class="creepypicture">
+  </div>
+</div>
+<div class="flex-responsive">
+  <div class="flex-static">
+    <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/creepypasta/tails.gif" class="creepypicture">
+    <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/creepypasta/ted-the-caver.gif" class="creepypicture">
+  </div>
+  <div class="flex-static">
+    <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/creepypasta/the-rake.gif" class="creepypicture">
+    <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/creepypasta/white-with-red.gif" class="creepypicture">
   </div>
 </div>
 
