--- a/projects/stayawhile/index.html
+++ b/projects/stayawhile/index.html
@@ -186,7 +186,7 @@
 <!-- DASHBOARDS FLICKITY -->
 <div data-flickity='{ "wrapAround": true, "percentPosition": false, "imagesLoaded": true, "freeScroll": true, "adaptiveHeight":true }'>
   <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/arithmatic/new-screens/homescreen-unlocked-red.png">
-<div data-flickity='{ "wrapAround": true, "percentPosition": false, "imagesLoaded": true, "freeScroll": true }'>
+</div>
 <!-- DASHBOARDS FLICKITY -->
 
 <p>The Locations page is arguably the most complex page on the site. This is where users would most likely spend the majority of their time. Since we wanted to encourage users to look at the apartments we offer as a network, units from every city we're established in&mdash;NYC, Boston and Philadelphia&mdash;can be viewed at once from this page.</p>
@@ -195,9 +195,9 @@
 <!-- INSERT SCROLLING VIDEO -->
 <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/arithmatic/new-screens/homescreen-unlocked-red.png">
 <!-- INSERT SCROLLING VIDEO -->
+
 <!-- INSERT MAP PIN IMAGE -->
-<img src="  
-https://s3-us-west-2.amazonaws.com/wip-bucket/github/arithmatic/new-screens/homescreen-unlocked-red.png">
+<img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/arithmatic/new-screens/homescreen-unlocked-red.png">
 <!-- INSERT MAP PIN IMAGE -->
 
 <p>I designed a unique set of symbols to represent unique amenities and policies found in the apartment building.</p>
@@ -258,8 +258,6 @@ Since this is a single page with almost thirty apartments, filtering is essentia
   <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/arithmatic/new-screens/homescreen-unlocked-red.png">
 </div>
 <!-- FLICKITY LISTING -->
-
-<p>Overall, it has been a fun journey at Stayawhile. I've grown leaps and bounds as both a designer and developer and am confident I can build anything on the web.</p>
 </div>
 
 <script type="text/javascript">
