--- a/projects/stayawhile/index.html
+++ b/projects/stayawhile/index.html
@@ -233,7 +233,7 @@ Since this is a single page with almost thirty apartments, filtering is essentia
   <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/Screen+Shot+2017-12-13+at+8.01.48+PM.png">
   <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/Screen+Shot+2017-12-13+at+8.02.06+PM.png">
   <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/Screen+Shot+2017-12-13+at+8.02.19+PM.png">
-<div data-flickity='{ "wrapAround": true, "percentPosition": false, "imagesLoaded": true, "freeScroll": true, "adaptiveHeight":true }'>
+</div>
 <!-- INSERT SELECTED FILTERS -->
 
 <p>It was also important to design both an empty state if the filters turned up no units and an error state in case anything went wrong with the filtering system.</p>
