--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
 		<div class="flex-container">
 			<div class="case-study-box three-cell">
 				<h4>Case Study</h4>
-				<p class="case-study-text"><a class="contentlinks" href="/projects/stayawhile/">Stayawhile</a>&mdash;Design and front-end development for a web application that allowed users to book any of the units in our network of apartments, as well as signing up through a background check.</p>
+				<p class="case-study-text"><a class="contentlinks" href="/projects/stayawhile/">Stayawhile</a>&mdash;Design and front-end development for a web application that allowed users to book any of the units in our network of apartments, as well as signing up through a background check. You can visit the full site <a href="http://stayawhile.com">here</a>.</p>
 			</div>
 			<div class="case-study-box three-cell">
 				<h4>Case Study</h4>
